--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "serverless offline start --httpPort=4000 --host 0.0.0.0",
+    "start": "serverless offline start --httpPort=4000 --host 0.0.0.0 --reloadHandler",
     "compile": "tsc -p . --noEmit",
     "test": "jest",
     "test:watch": "jest --watch --onlyChanged"
@@ -23,11 +23,11 @@
     "@types/node": "14.x",
     "@types/serverless": "^3",
     "aws-sdk": "^2.952.0",
-    "esbuild": "^0.12.21",
+    "esbuild": "^0.15.12",
     "jest": "^29.0.2",
-    "serverless": "^3.22.0",
-    "serverless-esbuild": "^1.32.8",
-    "serverless-offline": "^9.3.0",
+    "serverless": "^3.23.0",
+    "serverless-esbuild": "^1.33.0",
+    "serverless-offline": "^11.1.3",
     "typescript": "^4.3.5"
   }
 }
